# modmover

./: CMakeLists.txt  README.md  modmover
include/: Config.h  FileMover.h  Parser.h
src/: FileMover.cpp  Parser.cpp  main.cpp
